2011-04-12  Adrienne Walker  <enne@google.com>

Reviewed by James Robinson.

        [chromium] TilingData mishandles very small texture sizes
        https://bugs.webkit.org/show_bug.cgi?id=58364

        Use zero tiles when the texture size is too small for tiling.

        * platform/graphics/gpu/TilingData.cpp:
        (WebCore::TilingData::TilingData):
        (WebCore::TilingData::setMaxTextureSize):
2011-04-12  Adrienne Walker  <enne@google.com>

        Reviewed by James Robinson.

        [chromium] TilingData mishandles very small texture sizes
        https://bugs.webkit.org/show_bug.cgi?id=58364

        Update test to properly handle texture sizes of 0-3.

        * tests/TilingDataTest.cpp:
        (WebCore::TEST):

Canonical link: https://commits.webkit.org/73434@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@83674 268f45cc-cd09-0410-ab3c-d52691b4dbfc